--- a/TercerParte/Tercer_Parte.html
+++ b/TercerParte/Tercer_Parte.html
@@ -18,7 +18,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="barra">
                     <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="file:///C:/Jeremy/UTN/2023/Primer%20Cuatri/Web/Proyecto%231_Web-Alejandro_Jeremy/index.html">Pagina Principal</a>
+                    <a href="index.html" target="_blank" class="btn btn-success text-uppercase fs-6 fw-bolder" >Principal</a>
                     <a class="nav-link" href="#SobreDucati">Sobre Ducati</a>
                     <a class="nav-link" href="#MotorDucati">Motores Ducati</a>
                     <a class="nav-link" href="#DiseñoMotos">Diseños de Motos</a>
