--- a/SegundaParte/SegundaParte.html
+++ b/SegundaParte/SegundaParte.html
@@ -30,7 +30,7 @@
         </div>
         <h1 align="center">Motores Ducati</h1>
         <div  align="center" class="menu">
-            <a href="file:///C:/Jeremy/UTN/2023/Primer%20Cuatri/Web/Proyecto%231_Web-Alejandro_Jeremy/index.html">Ir a la pagina principal</a><br>
+            <a href="index.html">Ir a la pagina principal</a><br>
             <a href="#">Sobre los creadores de la pagina web</a>
         </div><br><br> 
         <!--Sobre los motores de Ducati-->
