--- a/SegundaParte/SegundaParte.html
+++ b/SegundaParte/SegundaParte.html
@@ -28,6 +28,9 @@
                 <h4>Ducati Motors CR</h4>
             </div>
         </div>
+         <div align="center">
+                            <a href="index.html" target="_blank" class="btn btn-success text-uppercase fs-6 fw-bolder" >Para más imformación!!</a>
+          </div>
         <h1 align="center">Motores Ducati</h1>
         <div  align="center" class="menu">
             <a href="index.html">Ir a la pagina principal</a><br>
