--- a/SegundaParte/SegundaParte.html
+++ b/SegundaParte/SegundaParte.html
@@ -25,7 +25,7 @@
     <body id=fondo>
         <div class="header">
             <div class="logo">
-                <h4>Ducati Motors CR</h4>
+                <h4>Ducati Motors </h4>
             </div>
         </div>
          <div align="center">
